change to reamspro docs

--- a/src/config/sidebar.yml
+++ b/src/config/sidebar.yml
@@ -1,20 +1,100 @@
 # Sidebar navigation
 
 - label: 'Introduction'
-  link: '/'
-- label: 'Getting started'
-  link: '/getting-started'
-- label: Usage
+  link: '/notes/intro'
+- label: 'Login and Access'
+  link: '/notes/login'
+- label: 'Dashboard'
+  link: '/notes/dashboard'
+- label: 'Communication'
+  link: '/notes/communication'
+- label: Settings
   items:
-    - label: 'Creating docs'
-      link: '/usage/creating-docs'
-    - label: 'Navigation'
-      link: '/usage/navigation'
-    - label: 'Shadowing'
-      link: '/usage/shadowing'
-- label: More
+    - label: 'Buildings'
+      link: '/setup/buildings'
+    - label: 'Company Profile'
+      link: '/setup/company-profile'
+    - label: 'Expense Categories'
+      link: '/setup/expense-categories'
+    - label: 'File Numbers'
+      link: '/setup/file-numbers'
+    - label: 'Invoice Categories'
+      link: '/setup/invoice-categories'
+    - label: 'Landlords'
+      link: '/setup/landlords'
+    - label: 'System Users'
+      link: '/setup/system-users'
+    - label: 'Units'
+      link: '/setup/units'
+    - label: 'User Roles'
+      link: '/setup/user-roles'
+    - label: 'Vacating Expenses'
+      link: '/setup/vacating-expenses'
+- label: Tenants
   items:
-    - label: FAQ
-      link: /faq
-    - label: 'Github'
-      link: https://github.com/rocketseat/gatsby-themes
+    - label: 'New Tenant'
+      link: '/tenants/new-tenant'
+    - label: 'Tenant List'
+      link: '/tenants/tenant-list'
+    - label: 'Tenant Statement'
+      link: '/tenants/tenant-statement'
+    - label: 'Vacate'
+      link: '/tenants/vacate'
+- label: Billing
+  items:
+    - label: 'Generate Water Bills'
+      link: '/billing/water-bills'
+    - label: 'Invoice List'
+      link: '/billing/invoices-list'
+    - label: 'Credit Notes'
+      link: '/billing/credit-notes'
+    - label: 'Building Monthly Invoice Report'
+      link: '/billing/buildingmir'
+- label: Receipting
+  items:
+    - label: 'New Tenant Receipt'
+      link: '/receipting/new-receipt'
+    - label: 'Non Tenant Receipt'
+      link: '/receipting/non-tenant'
+    - label: 'Receipt List'
+      link: '/receipting/receipt-list'
+- label: Payments
+  items:
+    - label: 'New Payment'
+      link: '/payments/new-payment'
+    - label: 'Payment List'
+      link: '/payments/payment-list'
+    - label: 'Cheque List'
+      link: '/payments/cheque-list'
+    - label: 'Payment Analysis'
+      link: '/payments/payments-analysis'
+    - label: 'Expense Categories'
+      link: '/payments/expense-categories'
+- label: Accounting
+  items:
+    - label: 'Chart of Accounts'
+      link: '/accounting/chartofaccounts'
+    - label: 'Bankings'
+      link: '/accounting/bankings'
+    - label: 'Journal Entries'
+      link: '/accounting/journalentries'
+    - label: 'Receivables'
+      link: '/accounting/receivables'
+    - label: 'Payables'
+      link: '/accounting/payables'
+    - label: 'Other Debtors'
+      link: '/accounting/other-debtors'
+    - label: 'Miscellaneous'
+      link: '/accounting/miscellaneous'
+- label: Reports
+  items:
+    - label: 'Tenant Reports'
+      link: '/reports/tenant-report'
+    - label: 'Managerial Reports'
+      link: '/reports/managerial-report-index'
+    - label: 'Financial Reports'
+      link: '/reports/financial-report-index'
+    - label: 'Landlord Remmitance Reports'
+      link: '/reports/landlord-remmitance'
+    - label: 'Client Monthly Invoice'
+      link: '/reports/client-monthly-invoice'
